test remove trans url - put default layout back

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
-layout: page
+layout: default
 lang: en
-trans_url: "/accueil/"
 ---
 
 {% capture index %}{% include index.md %}{% endcapture %}
