refix trans url

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 lang: en
-trans_url: index
+trans_url: /contexte
 ---
 
 {% capture index %}{% include index.md %}{% endcapture %}
